Add a dialog box that receive the informations of the book

--- a/style.css
+++ b/style.css
@@ -42,45 +42,83 @@ h1{
     color: black;
     background-color: white;
 }
-.header > button:active{
-    position: relative;
-    top: 2px;
-}
 .body{
     height: 85%;
     background-image: url(../objects/pexels-rafael-cosquiere-2041540.jpg);
     background-size: cover;
     background-repeat: no-repeat ;
+    display: flex;
+    flex-direction: column;
 }
-/* .body > img{
-   
-    width: 100%;
-    opacity: 0.90;
-    z-index: -1;
-} */
 h3{
-    /* position: absolute;
-    top: 20px;
-    left: 20vw; */
     text-align: center;
     color: white;
     font-size: 30px;
 }
-button{
-    
-}
 .card{
-    background-color: white;
-    min-width: 100px;
-    height: fit-content;
+    background-color: beige;
+    min-width: fit-content;
+    height: 100px;
     padding: 26px 20px;
     border-radius: 15px;
     font-weight: 500;
 }
 .cards{
     padding: 15px;
-    min-height:78%;
     display: flex;
+    justify-content: center;
+    justify-items: start;
     flex-wrap: wrap;
     gap: 15px;
+}
+dialog{
+    border-radius: 10px;
+}
+form{
+    font-family: inherit;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 45px 19px;
+}
+form div{
+    display: flex;
+    flex-direction: column;
+}
+form input{
+    height: 30px;
+    font-size: 16px;
+    padding-bottom: 3px;
+    border: none;
+    border-bottom: 2px black solid;
+}
+.checkbox{
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.buttons{
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 10px;
+}
+.buttons > button{
+    border: black solid 1px;
+    color: white;
+    background-color: black;
+    padding: 7px 14px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 8px;
+}
+.buttons > button:nth-child(2){
+    color: black;
+    background-color: white;
+}
+::backdrop{
+    opacity: 0.8;
+    background-color: rgba(0, 0, 0, 0.527);
 }
