--- a/style.css
+++ b/style.css
@@ -122,7 +122,8 @@ form input{
     opacity: 0.8;
     background-color: rgba(0, 0, 0, 0.527);
 }
-.removeBtn{
+.removeBtn,
+.toggleBtn{
     border: black solid 1px;
     color: white;
     background-color: black;
@@ -131,5 +132,6 @@ form input{
     font-weight: 600;
     font-size: 12px;
     border-radius: 8px;
+    margin-inline: 5px;
     
 }
